# archivefs

./: Cargo.toml  README.md  bumpversion.fish
doc/: archivefs.1.adoc
src/: archive.rs  main.rs
