[package]
name = "archivefs"
version = "0.1.0"
authors = ["Franco Bugnano <franco@bugnano.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyfuse = "0.4.1"
anyhow = "1.0.40"
libc = "0.2.93"
clap = "2.33.3"
termios = "0.3.3"
relative-path = "1.3.2"

