[package]
name = "archivefs"
version = "1.0.1"
authors = ["Franco Bugnano <franco@bugnano.it>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A read-only FUSE filesystem for mounting compressed archives, inspired by archivemount."
repository = "https://github.com/bugnano/archivefs"
readme = "README.md"
keywords = ["libarchive", "zip", "7z", "tar", "mount"]
categories = ["command-line-utilities", "compression", "filesystem"]
include = [
	"**/*.rs",
	"Cargo.toml",
	"Cargo.lock",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyfuse = "0.4"
anyhow = "1.0"
libc = "0.2"
clap = "2.33"
termios = "0.3"
relative-path = "1.3"
log = "0.4"
env_logger = "0.8"
daemonize = "0.5"

